# rust_base

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  main.rs  middleware.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: auth.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
migrations/: 20231123000000_create_users_table.sql  20231124000000_add_password_to_users.sql
scripts/: init-db.sh
